# public/swagger/openapi.yml
@@ -15,6 +15,8 @@ paths:
       tags:
         - Default
       summary: Verifica o status da API
+      security:
+        - apiKey: []
       responses:
         '200':
           description: Status da API
@@ -44,7 +46,7 @@ paths:
         - Default
       summary: Retorna o usuário autenticado
       security:
-        - bearerAuth: []
+        - apiKey: []
       responses:
         '200':
           description: Usuário autenticado
@@ -65,6 +67,8 @@ paths:
       tags:
         - Products
       summary: Lista os produtos com paginação
+      security:
+        - apiKey: []
       parameters:
         - name: page
           in: query
@@ -85,6 +89,8 @@ paths:
       tags:
         - Products
       summary: Retorna um produto pelo código
+      security:
+        - apiKey: []
       parameters:
         - name: code
           in: path
@@ -101,6 +107,8 @@ paths:
       tags:
         - Products
       summary: Deleta um produto pelo código
+      security:
+        - apiKey: []
       parameters:
         - name: code
           in: path
@@ -117,6 +125,8 @@ paths:
       tags:
         - Products
       summary: Atualiza um produto pelo código
+      security:
+        - apiKey: []
       parameters:
         - name: code
           in: path
@@ -163,7 +173,7 @@ paths:
 
 components:
   securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+    apiKey:
+      type: apiKey
+      in: header
+      name: X-API-KEY
